@@ -1,0 +1,15 @@
+##source=VariantTools 1.1.0
+##phasing=unphased
+##fileformat=VCFv4.1
+##project=example
+##fileDate=20121029
+##INFO=<ID=DP,Number=1,Type=Integer,Description="Total Depth">
+##INFO=<ID=AF,Number=A,Type=Float,Description="Allele Frequency">
+##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
+##FORMAT=<ID=AR,Number=A,Type=Integer,Description="ALT read counts">
+##FORMAT=<ID=RR,Number=1,Type=Integer,Description="REF read count">
+##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Total read count">
+##FORMAT=<ID=AAP,Number=A,Type=Integer,Description="Flags indicating which ALTs are present">
+##FORMAT=<ID=RAP,Number=1,Type=Integer,Description="Flag indicating if REF is present">
+TP53	1000311	.	T	A	.	.	DP=14;AF=0.5	AR:RR:DP:AAP:RAP	2:29:31:1:1
+TP53	1011392	.	C	G	.	.	.	AR:RR:DP:AAP:RAP	540:41:582:1:1
